# project-demos-public

./: .gitignore  NOTEBOOK_PRESERVATION_STRATEGY.md  PORTFOLIO_COMPLETE.md  PORTFOLIO_DOCUMENTATION_COMPLETE.md  PORTFOLIO_READY.md  PORTFOLIO_VISUAL_SHOWCASE.md  PROJECT_1_COMPUTER_VISION_XRAY.md  PROJECT_1_COMPUTER_VISION_XRAY_REVISED.md  PROJECT_2_NLP_SENTIMENT_ANALYSIS.md  PROJECT_2_NLP_SENTIMENT_ANALYSIS_REVISED.md  PROJECT_3_RAG_SYSTEM.md  PROJECT_3_RAG_SYSTEM_REVISED.md  PROJECT_4_CLOUD_ML_API.md  PROJECT_4_CLOUD_ML_API_REVISED.md  PROJECT_5_CAPSTONE_TRADING.md  PROJECT_5_CAPSTONE_TRADING_REVISED.md  PROJECT_IMPROVEMENT_PLAN.md  README.md  VISUALIZATIONS_GALLERY.md  build_parallel_showcase.sh  cleanup_and_improve.sh  portfolio.html  preserve_notebook_results.py  setup_notebook_display.sh
cloud_app_demo/lab4/: Dockerfile  README.md  build-push.sh  deploy.sh  pyproject.toml
cloud_app_demo/lab4/.k8s/base/: deployment-lab4.yaml  kustomization.yaml
cloud_app_demo/lab4/.k8s/overlays/dev/: kustomization.yaml
cloud_app_demo/lab4/infra/: deployment-pythonapi.yaml  deployment-redis.yaml  namespace.yaml  service-prediction.yaml  service-redis.yaml
cloud_app_demo/lab4/src/: housing_predict.py  main.py
cloud_app_demo/lab4/tests/: conftest.py  test_src.py
cloud_app_demo/mlapi/: .dockerignore  Dockerfile  README.md  build-push.sh  deploy.sh  pyproject.toml  submission-namespace.yaml
cloud_app_demo/mlapi/.k8s/base/: deployment-mlapi.yaml  deployment-redis.yaml  kustomization.yaml  service-mlapi.yaml
cloud_app_demo/mlapi/src/: main.py  sentiment_predict.py
(+581 files in other folders)
